  - various minor documentation fixes

0.009002 2010-04-04
  - mst is a complete idiot and got the wrong dist name in COPYRIGHT

0.009001 2010-04-04
  - Initial release