@@ -1,3 +1,4 @@
+  - Add "COOL EXAMPLES" section to the doc
   - various minor documentation fixes
 
 0.009002 2010-04-04
